src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Date__c</fullName>
        <description>This field is used to stamp the date and time that a Task status is moved to &quot;Completed&quot;</description>
        <label>Task Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Actions_Taken__c</fullName>
        <description>Actions taken by the recipient of an email (Sign Up, Enter Credit Card, Hits a button, Visits a particular page, etc).</description>
        <label>Tout Actions Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Campaign_Details__c</fullName>
        <description>A link to details around the Tout Campaign.</description>
        <label>Tout Campaign Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Campaign__c</fullName>
        <description>The name of the Tout Campaign that this email is a part of</description>
        <label>Tout Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email has clicked on links inside the email.</description>
        <label>Tout Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Details__c</fullName>
        <description>A link to more details around the Touted email.</description>
        <label>Tout Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Events_Tracked__c</fullName>
        <description># of Tout Engagement Events tracked around this email.</description>
        <label>Tout Events Tracked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Last_Event_At__c</fullName>
        <description>The last time someone viewed, clicked or engaged in any other way with this email.</description>
        <label>Tout Last Event At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Presentation_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a presentation included in this email was viewed.</description>
        <label>Tout Presentation Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied_At__c</fullName>
        <description>THe timestamp of when someone last replied to this email.</description>
        <label>Tout Replied At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Tout detected a response to this email.</description>
        <label>Tout Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Sent_By__c</fullName>
        <label>Tout Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template_Details__c</fullName>
        <description>A link to details around the Tout template.</description>
        <label>Tout Template Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template__c</fullName>
        <description>The name of the Tout template used in this email.</description>
        <label>Tout Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email viewed it.</description>
        <label>Tout Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Mirror_of_Standard_field__c</fullName>
        <description>This field is strictly used to mirror the info in the Standard Type field of an activity</description>
        <label>Type (Mirror of Standard field)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <label>Type of Call</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event/Conference</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voicemail_Type__c</fullName>
        <description>This field will be filled in when New Voice Media creates a Voicemail Task to tell us what number was called to leave a voice mail.</description>
        <inlineHelpText>This field will be filled in when New Voice Media creates a Voicemail Task to tell us what number was called to leave a voice mail.</inlineHelpText>
        <label>Voicemail Type</label>
        <picklist>
            <picklistValues>
                <fullName>CBSS Rotating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TK Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>BDR_BP_Tasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>BDR BP - Open Tasks</label>
        <sharedTo>
            <group>BDR_Test</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BDR_BP_Today_s_Tasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Betsy Anderson</value>
        </filters>
        <label>BDR BP - Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_OpenTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Purpose__c</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Tasks</label>
    </listViews>
    <listViews>
        <fullName>Tasks_Without_Contacts</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Email:</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>My Unresolved Touted Emails</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>